# simple-dns

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.MD  README.md  generate_sample_files.py
.github/workflows/: rust.yml
bind9-sys/: Cargo.toml  build.rs  wrapper.h
bind9-sys/src/: bind9.rs  dummy.rs  lib.rs
bind9-tests/: Cargo.toml  build.rs
bind9-tests/src/: lib.rs  rr_tests.rs
simple-dns/: CHANGELOG.md  Cargo.toml  README.MD  README.md
simple-dns/bench/: Cargo.toml
simple-dns/bench/benches/: packet_bench.rs
simple-dns/benches/: packet_bench.rs
simple-dns/fuzz/: Cargo.toml
simple-dns/fuzz/fuzz_targets/: packet_parse.rs
simple-dns/samples/master_files/: master.txt
simple-dns/samples/zonefile/: A.sample.VAXA  A.sample.VENERA  AAAA.sample.  AFSDB.sample.  CERT.sample  DHCID.sample  DNSKEY.sample  DS.sample  EUI48.sample  EUI64.sample  HINFO.sample.  HTTPS.sample  IPSECKEY.sample  ISDN.sample.  KX.sample  LOC.sample.  MX.sample  NS.sample  NSAP-PTR.sample.  NSAP.sample  NSEC.sample  RP.sample  RRSIG.sample  RT.sample.  SOA.sample  SRV.sample  TXT.sample.  WKS.sample.  ZONEMD.sample
simple-dns/src/: bytes_buffer.rs  cursor.rs  lib.rs  seek.rs  simple_dns_error.rs  write.rs
simple-dns/src/dns/: character_string.rs  header.rs  header_buffer.rs  mod.rs  name.rs  packet.rs  packet_buf.rs  packet_header.rs  packet_part.rs  question.rs  resource_record.rs  wire_format.rs
simple-dns/src/dns/rdata/: a.rs  aaaa.rs  afsdb.rs  caa.rs  cert.rs  dhcid.rs  dnskey.rs  ds.rs  eui.rs  hinfo.rs  ipseckey.rs  isdn.rs  kx.rs  loc.rs  macros.rs  minfo.rs  mod.rs  mx.rs  naptr.rs  nsap.rs  nsec.rs  null.rs  opt.rs  route_through.rs  rp.rs  rrsig.rs  soa.rs  srv.rs  svcb.rs  txt.rs  wks.rs  zonemd.rs
simple-dns/src/master/: mod.rs  parse_error.rs  parser.rs  tokenizer.rs
simple-dns/tests/: packet_tests.rs
simple-mdns/: CHANGELOG.md  Cargo.toml  LICENSE  README.MD  README.md
simple-mdns/src/: conversion_utils.rs  dns_packet_receiver.rs  instance_information.rs  lib.rs  network_scope.rs  oneshot_resolver.rs  resource_record_manager.rs  service_discovery.rs  simple_mdns_error.rs  simple_responder.rs  socket_helper.rs
simple-mdns/src/async_discovery/: mod.rs  oneshot_resolver.rs  service_discovery.rs  simple_responder.rs
simple-mdns/src/sync_discovery/: mod.rs  oneshot_resolver.rs  service_discovery.rs  simple_responder.rs
simple-mdns/src/sync_hostname_resolver/: mod.rs  sync_hostname_resolver.rs
simple-mdns/src/sync_responders/: mod.rs  oneshot_resolver.rs  service_discovery.rs  simple_responder.rs
simple-mdns/tests/: oneshot_resolver.rs  oneshot_resolver_tokio.rs  service_discovery.rs  service_discovery_tests.rs  service_discovery_tokio.rs  sync_resolver.rs
src/: lib.rs  mdns.rs
src/dns/: character_string.rs  mod.rs  name.rs  packet.rs  packet_header.rs  question.rs  resource_record.rs
src/dns/rdata/: a.rs  hinfo.rs  minfo.rs  mod.rs  mx.rs  null.rs  soa.rs  wks.rs
zonefiles/: sample.txt
