[package]
name = "simple-mdns"
version = "0.4.0"
authors = ["Ilson Roberto Balliego Junior <ilson.balliego@gmail.com>"]
edition = "2021"
description = "Rust implementation of mDNS for service discovering (DNS-SD)"
repository = "https://github.com/balliegojr/simple-dns"
license = "MIT"
keywords = ["dns", "dns-sd", "mdns", "service-discovery", "zeroconf"]
categories = ["network-programming"]

[package.metadata.docs.rs]
all-features = true

[features]
default = [] 
sync = []
async-tokio = ["dep:tokio"]

[dependencies]
simple-dns = { path = "../simple-dns", version = "0.5" }
socket2 = { version = "^0.4", features = ["all"] }
log = "^0.4"
lazy_static = "^1.4.0"
radix_trie = "^0.2.1"
tokio = { version = "^1.22", features = ["net", "sync", "rt"], optional = true, default-features=false }

[dev-dependencies]
stderrlog = "^0.5"
tokio = { version = "^1.22", features = ["full"] }
