[package]
name = "simple-dns-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.simple-dns]
path = ".."

[[bin]]
name = "packet_parse"
path = "fuzz_targets/packet_parse.rs"
test = false
doc = false
bench = false
